--- a/Signal/translations/nl.lproj/PluralAware.stringsdict
+++ b/Signal/translations/nl.lproj/PluralAware.stringsdict
@@ -184,9 +184,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>+ %1$ld verzoek</string>
+			<string>+%1$ld verzoek</string>
 			<key>other</key>
-			<string>+ %1$ld verzoeken</string>
+			<string>+%1$ld verzoeken</string>
 		</dict>
 	</dict>
 	<key>CALL_LINK_MULTI_SUCCESS</key>
@@ -595,9 +595,9 @@
 			<key>NSStringFormatValueTypeKey</key>
 			<string>ld</string>
 			<key>one</key>
-			<string>+ %1$ld ander</string>
+			<string>+%1$ld ander</string>
 			<key>other</key>
-			<string>+ %1$ld anderen</string>
+			<string>+%1$ld anderen</string>
 		</dict>
 	</dict>
 	<key>GROUP_CALL_NOTIFICATION_MANY_JOINED_%d</key>
@@ -885,7 +885,7 @@
 			<key>one</key>
 			<string>%2$@ heeft verzocht om lid te worden van de groep en dat verzoek weer ingetrokken via de link.</string>
 			<key>other</key>
-			<string>%2$@ hebben %1$d keer verzocht om lid te worden van de groep en die verzoeken weer ingetrokken via de link.</string>
+			<string>%2$@ heeft %1$d keer verzocht om lid te worden van de groep en die verzoeken weer ingetrokken via de link.</string>
 		</dict>
 	</dict>
 	<key>GROUP_STORY_VIEWERS_%d</key>
