--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• Als je nu ongelezen berichten archiveert, blijven deze ongelezen. Alsof je een boek dat je niet hebt uitgelezen, weer terug op de plank zet voor een later moment.
