--- a/fastlane/metadata/ar-SA/release_notes.txt
+++ b/fastlane/metadata/ar-SA/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• الآن عندما تقوم بأرشفة رسالة غير مقروءة، سَتبقى غير مقروءة. استلهمنا من التقليد الخالد المُتمثِّل في إرجاع كتاب إلى الرف رغم عدم إكمال قراءته.
