--- a/fastlane/metadata/pl/release_notes.txt
+++ b/fastlane/metadata/pl/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• Od teraz, gdy zarchiwizujesz wątek z nieodczytanymi wiadomościami, wątek ten zachowa status „nieodczytanego” również w archiwum. Zawsze możesz do niego wrócić. Tymczasem… Co z oczu, to z serca, prawda?
