--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• Acum, când arhivezi un șir de mesaje necitite, acesta va rămâne necitit. Ne-am inspirat din tradiția atemporală de a pune o carte înapoi pe raft, chiar dacă nu ai terminat-o încă de citit.
