--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• Теперь, когда вы архивируете непрочитанную переписку, она останется непрочитанной. Нас вдохновила знакомая каждому ситуация — отложить недочитанную книгу на полку, чтобы вернуться к ней в подходящий момент.
