--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• เมื่อคุณจัดเก็บข้อความที่ยังไม่ได้อ่านในที่เก็บถาวร ข้อความนั้นจะคงอยู่ในสถานะเดิมโดยไม่ถูกทำเครื่องหมายว่าอ่านแล้ว
