--- a/fastlane/metadata/tr/release_notes.txt
+++ b/fastlane/metadata/tr/release_notes.txt
@@ -1,1 +1,1 @@
-• Now when you archive an unread message thread it will stay unread. We drew inspiration from the timeless tradition of putting a book back on the shelf even though you haven’t finished reading it yet.
+• Okunmamış bir mesaj başlığını arşivlediğinde, okunmamış olarak kalacaktır. Rafa geri kaldırdığın okunmamış kitaplarından ilham aldık.
